@@ -7,6 +7,7 @@ Bugfixes:
  - Windows: Fix Unicode directory handling
  - Qt: Fix changing resolution of software renderer
  - Qt: Fix setting overrides
+ - Qt: Fix cut off tiles and alignment issues in tile viewer
 
 0.5.1: (2016-10-05)
 Bugfixes:
